More Python notes

--- a/PythonNotes.ipynb
+++ b/PythonNotes.ipynb
@@ -18,6 +18,8 @@
     "        - [Regular expressions](#Regular-expressions:)\n",
     "        - [Search and replace](#Search-and-replace:-`re.sub`)\n",
     "        - [Split according to a regular expression](#Split-according-to-a-regular-expression)\n",
+    "- [29 October 2018](#29-october-2018)\n",
+    "    - [Python Functions](#python-functions)\n",
     "\n",
     "-----\n",
     "-----"
@@ -861,6 +863,32 @@
     "re.split(r's.p', coolstring)\n",
     "re.split(r's.*p', coolstring)\n",
     "re.split(r's.*?p', coolstring)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "\n",
+    "\n",
+    "# 29 October 2018\n",
+    "\n",
+    "## Python Functions\n",
+    "\n",
+    "syntax similar to `if/else` statements and `for` loops:\n",
+    "colon to end the function name/argument names,\n",
+    "and indentation of the function body.\n",
+    "\n",
+    "```python\n",
+    "def function_name(arguments):\n",
+    "    \"\"\"docstring here: to explain what the function does\"\"\"\n",
+    "    command indented\n",
+    "    indented command\n",
+    "    return value # returns None if no return statement\n",
+    "```\n",
+    "\n",
+    "arguments can be named, can have default values:"
    ]
   },
   {
