--- a/PythonQuickReference.ipynb
+++ b/PythonQuickReference.ipynb
@@ -13,7 +13,9 @@
     "\t- [Libraries](#libraries)\n",
     "\t- [Functions](#functions)\n",
     "\t\t- [Defining functions](#defining-functions)\n",
+    "        - [Testing functions](#testing-functions)\n",
     "- [String processing](#string-processing)\n",
+    "    - [Regex](#regex)\n",
     "- [Functions by library](#functions-by-library)\n",
     "    - [Names & objects by library](#names-&-objects-by-library)\n",
     "\n",
@@ -100,12 +102,37 @@
     "\n",
     "#### Defining functions\n",
     "\n",
-    "```\n",
+    "- `def`: keyword for function definition\n",
+    "- `assert`: [ ] ...if it's false, throw an error?\n",
+    "\n",
+    "```python\n",
     "def add1scalar(x):\n",
     "     \"\"\"adds 1 to scalar input\"\"\"\n",
     "     x += 1\n",
     "     print(\"after add1_scalar: \", x)\n",
     "```\n",
+    "\n",
+    "```python\n",
+    "def foo(arg1, arg2=0):\n",
+    "  \"\"\"\n",
+    "  Return arg1 -1 + arg2.\n",
+    "  arg2 is optional, 0 by default.\n",
+    "  good practice: include examples.\n",
+    "  Examples:\n",
+    "\n",
+    "  >>> foo(5)\n",
+    "  4\n",
+    "  >>> foo(5,8)\n",
+    "  12\n",
+    "  >>> foo(5, arg2=2)\n",
+    "  6\n",
+    "  \"\"\"\n",
+    "  assert type(arg1)==int, \"error message: here arg1 should be an integer\"\n",
+    "  res = arg1 - 1 + arg2\n",
+    "  return res\n",
+    "```\n",
+    "\n",
+    "#### Testing functions\n",
     "\n",
     "----"
    ]
@@ -127,7 +154,7 @@
     "\n",
     "### Regex\n",
     "\n",
-    "- `re.search()`: Basic regex search, e.g. [EXAMPLE]\n",
+    "- `re.search(r'pattern', item)`: Basic regex search, finding `pattern` in `item`.\n",
     "- `re.findall()`:\n",
     "- `re.sub()`: String substitution based on regex, e.g. `taxon=\"Homo sapiens\" ; re.sub(r'^(\\S).* ([^\\s]+)', r'\\1_\\2', taxon)` returns \"H_sapiens\"\n",
     "- `re.split()`: String slicing based on regex, e.g. [EXAMPLE]\n",
@@ -153,6 +180,8 @@
     "- `copy`\n",
     "\t- `copy.copy(x)`: Shallow copy operation\n",
     "\t- `copy.deepcopy(x)`: Deep copy operation\n",
+    "- `doctest`\n",
+    "    - `doctest.testmod(x)`: \n",
     "- `glob`\n",
     "\t- `glob.glob('pattern')`: Returns all filenames in the current directory that\n",
     "\t  match `pattern`\n",
@@ -162,7 +191,7 @@
     "\t- `matplotlib.pyplot.plot(list)`: Plots values in `list` as a line graph.\n",
     "\t- `matplotlib.pyplot.show()`: Shows whichever graph was just generated.\n",
     "\t- `matplotlib.pyplot.figure()`: Creates a space into which you can tile multiple plots.\n",
-    "      See the Software Carpentry example, below.\n",
+    "      **See the Software Carpentry example, below.**\n",
     "\t\t- `graph1 = fig.add_subplot(x, y, z)`: Puts the plot `graph1` into position `z` \n",
     "          (counting L-R & top-bottom) of an `x`-by-`y` grid of subplots\n",
     "\t\t- `graph1.set_ylim(0,6)`: Sets y-limits for `graph1`\n",
