--- a/PythonQuickReference.ipynb
+++ b/PythonQuickReference.ipynb
@@ -35,7 +35,8 @@
     "### Variables and [data types](https://docs.python.org/3/reference/datamodel.html)\n",
     "\n",
     "- `m = 4`: set variable `m` to 4\n",
-    "- ``%whos``: display a table of all variables currently set (IPython only).\n",
+    "- `%whos`/`%who`: display a table of all variables currently set (IPython only).\n",
+    "- `rm(m)`: delete variable `m` from memory\n",
     "- `print(x)`: display the value of `x`.\n",
     "- Basic data types: `int`, `float`, `str`, `bool`. Use, say, `int(x)` to convert between them.\n",
     "\t- Convert numbers into strings with text replacement: `y = \"%s\" % 5`\n",
@@ -67,6 +68,13 @@
     "\t- Array attributes:\n",
     "\t\t- ``data.shape``: the dimensions of the array ``data`` (rows, cols)\n",
     "\t\t- ``data.dtype``: the data type of elements in ``data``\n",
+    "- Dictionaries:\n",
+    "    - `dict([\"green\", 1], [\"blue\", 4], [\"red\", 143]])`: generates a dictionary with three \n",
+    "      key/value pairs.\n",
+    "    - Iterate over a loop `x` with `[x[i] for i in range(len(x)) if i>3]`\n",
+    "    - `dict( [[k, v*2] for k,v in h.items()] )`: Apply a function to a dictionary `h` (\"hash\")\n",
+    "\n",
+    "-----\n",
     "\n",
     "### Arithmetic\n",
     "\n",
@@ -134,6 +142,12 @@
     "\n",
     "#### Testing functions\n",
     "\n",
+    "----\n",
+    "\n",
+    "### Loops\n",
+    "\n",
+    "[for, if/elif/else, while, try/finally]\n",
+    "\n",
     "----"
    ]
   },
@@ -166,6 +180,28 @@
     "    - `mo.start(1)`: the position where the match for group 1 starts\n",
     "\n",
     "----\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running external programs\n",
+    "\n",
+    "* Module `subprocess`\n",
+    "    * `subprocess.call()`:\n",
+    "    * `subprocess.check_output(\"program\")`: Much like `subprocess.call()` but with an \n",
+    "       error check included.\n",
+    "    * `subprocess.check_output(\"program & its arguments\", shell=True)`: Run the included \n",
+    "       arguments as if in the shell.\n",
+    "    * `subprocess.run()`:\n",
+    "\n",
+    "* "
    ]
   },
   {
@@ -260,6 +296,8 @@
     "\t  containing this Python file. Only works if you haven't used `os.chdir()` yet.\n",
     "\t- `os.mkdir(x)`: Creates the folder `x` (see \n",
     "      <https://docs.python.org/3/library/os.html#os.mkdir>)\n",
+    "    - \n",
+    "- `subprocess`\n",
     "    - \n",
     "- `time`: [Time-related functions](https://docs.python.org/3/library/time.html).\n",
     "\t- `time.ctime()`: current date & time\n",
